bridge/base/0-newsletter-namespace.yaml
#! 0-newsletter-namespace.yaml
# Generated code, do not edit
apiVersion: v1
kind: Namespace
metadata:
    name: newsletter
    labels:
        com.docker.compose.project: newsletter
