bridge/base/avaliar-expose.yaml
#! avaliar-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: avaliar
    namespace: newsletter
    labels:
        com.docker.compose.project: newsletter
        com.docker.compose.service: avaliar
spec:
    selector:
        com.docker.compose.project: newsletter
        com.docker.compose.service: avaliar
    ports:
        - name: avaliar-8082
          port: 8082
          targetPort: avaliar-8082
