bridge/base/database-auth-expose.yaml
#! database-auth-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: database-auth
    namespace: newsletter
    labels:
        com.docker.compose.project: newsletter
        com.docker.compose.service: database-auth
spec:
    selector:
        com.docker.compose.project: newsletter
        com.docker.compose.service: database-auth
    ports:
        - name: database-a-5432
          port: 5432
          targetPort: database-a-5432
