bridge/base/database-auth-service.yaml
#! database-auth-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: database-auth-published
    namespace: newsletter
    labels:
        com.docker.compose.project: newsletter
        com.docker.compose.service: database-auth
spec:
    selector:
        com.docker.compose.project: newsletter
        com.docker.compose.service: database-auth
    ports:
        - name: database-a-5432
          port: 5432
          protocol: TCP
          targetPort: database-a-5432

# check if there is at least one published port
