bridge/base/database-avaliacao-expose.yaml
#! database-avaliacao-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: database-avaliacao
    namespace: newsletter
    labels:
        com.docker.compose.project: newsletter
        com.docker.compose.service: database-avaliacao
spec:
    selector:
        com.docker.compose.project: newsletter
        com.docker.compose.service: database-avaliacao
    ports:
        - name: database-a-5432
          port: 5432
          targetPort: database-a-5432
