bridge/base/database-avaliacao-service.yaml
#! database-avaliacao-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: database-avaliacao-published
    namespace: newsletter
    labels:
        com.docker.compose.project: newsletter
        com.docker.compose.service: database-avaliacao
spec:
    selector:
        com.docker.compose.project: newsletter
        com.docker.compose.service: database-avaliacao
    ports:
        - name: database-a-5433
          port: 5433
          protocol: TCP
          targetPort: database-a-5432

# check if there is at least one published port
