bridge/base/enviar-expose.yaml
#! enviar-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: enviar
    namespace: newsletter
    labels:
        com.docker.compose.project: newsletter
        com.docker.compose.service: enviar
spec:
    selector:
        com.docker.compose.project: newsletter
        com.docker.compose.service: enviar
    ports:
        - name: enviar-8083
          port: 8083
          targetPort: enviar-8083
