bridge/base/enviar-service.yaml
#! enviar-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: enviar-published
    namespace: newsletter
    labels:
        com.docker.compose.project: newsletter
        com.docker.compose.service: enviar
spec:
    selector:
        com.docker.compose.project: newsletter
        com.docker.compose.service: enviar
    ports:
        - name: enviar-8083
          port: 8083
          protocol: TCP
          targetPort: enviar-8083

# check if there is at least one published port
