bridge/base/envio-conteudo-service.yaml
#! envio-conteudo-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: envio-conteudo-published
    namespace: newsletter
    labels:
        com.docker.compose.project: newsletter
        com.docker.compose.service: envio-conteudo
spec:
    selector:
        com.docker.compose.project: newsletter
        com.docker.compose.service: envio-conteudo
    ports:
        - name: envio-cont-8084
          port: 8084
          protocol: TCP
          targetPort: envio-cont-8084

# check if there is at least one published port
