bridge/base/repercussao-expose.yaml
#! repercussao-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: repercussao
    namespace: newsletter
    labels:
        com.docker.compose.project: newsletter
        com.docker.compose.service: repercussao
spec:
    selector:
        com.docker.compose.project: newsletter
        com.docker.compose.service: repercussao
    ports:
        - name: repercussa-8085
          port: 8085
          targetPort: repercussa-8085
