bridge/base/repercussao-service.yaml
#! repercussao-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: repercussao-published
    namespace: newsletter
    labels:
        com.docker.compose.project: newsletter
        com.docker.compose.service: repercussao
spec:
    selector:
        com.docker.compose.project: newsletter
        com.docker.compose.service: repercussao
    ports:
        - name: repercussa-8085
          port: 8085
          protocol: TCP
          targetPort: repercussa-8085
